src/test/deca/context/valid/122_CastFloat.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Résultats:
//
//
// Historique:
//    cree le 01/01/2022

class A {
}

class B extends A {
}

{
    int a = 1;
    float f = (float)(a);
}
