src/test/deca/context/invalid/33_MethodIntFloat.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 17: ContextualError: f must have same type
// 
// Historique:
//    cree le 01/01/2022

class A {
	int f() {
		return 1;
	}
}
class B extends A {
	// Doit etre refuse.
	float f() {
		return 1.0;
	}
}
